changed color for now so it is visible, need to fix svg for github and get images to actually show.

--- a/src/index.css
+++ b/src/index.css
@@ -191,9 +191,9 @@ p {
   background-color: var(--forth) !important;
 }
 
-.card {
+/* .card {
   background-color: var(--primary) !important;
-}
+} */
 
 
 /* --------------------------------------------------------------------------------------------------------------- */
@@ -213,7 +213,7 @@ flex-flow: row wrap;
   min-width: 30%;
   min-height: 40vh;
   /* background-color: aliceblue; */
-  background:var(  --secondary-color);
+  background:var(  --secondary);
   background-position:center;
   display: flex;
   flex-direction: column;
@@ -221,7 +221,7 @@ flex-flow: row wrap;
   padding: 10px;
   width: 20vw;
   height: 100%;
-  border: 3px solid var(--primary-color) ;
+  border: 3px solid var(--primary) ;
   border-radius: 4vw;
   font-size:1.5vw;
   box-shadow: inset;
@@ -264,7 +264,7 @@ font-size: xx-large;
 .project-card p{
   pointer-events: none;
   margin-top: 1%;
-  color: var(--text-color);
+  color: var(--tertiary);
   padding: 00px 10px 0px 10px;
   
   font-size: x-large;
